tests/baselines/reference/contextualTyping9.errors.txt
tests/cases/compiler/contextualTyping9.ts(1,42): error TS2322: Type '({ id: 数字; } | { id: 数字; name: 文字; })[]' is not assignable to type '{ id: 数字; }[]'.
  Type '{ id: 数字; } | { id: 数字; name: 文字; }' is not assignable to type '{ id: 数字; }'.
    Type '{ id: 数字; name: 文字; }' is not assignable to type '{ id: 数字; }'.
      Object literal may only specify known properties, and 'name' does not exist in type '{ id: 数字; }'.


==== tests/cases/compiler/contextualTyping9.ts (1 errors) ====
    var foo:{id:number;}[] = [{id:1}, {id:2, name:"foo"}];
                                             ~~~~~~~~~~
!!! error TS2322: Type '({ id: 数字; } | { id: 数字; name: 文字; })[]' is not assignable to type '{ id: 数字; }[]'.
!!! error TS2322:   Type '{ id: 数字; } | { id: 数字; name: 文字; }' is not assignable to type '{ id: 数字; }'.
!!! error TS2322:     Type '{ id: 数字; name: 文字; }' is not assignable to type '{ id: 数字; }'.
!!! error TS2322:       Object literal may only specify known properties, and 'name' does not exist in type '{ id: 数字; }'.